fix: prevent duplicate <script src=...> tags in build output
Previously, `npm run build` sometimes generated multiple <script> tags
in index.html due to repeated HtmlWebpackPlugin injection. This has been fixed.

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
         video { background-color: black; width: 100%; max-width: 320px; }
         input, button { margin: 5px; padding: 8px; }
     </style>
-<script defer src="bundle.js"></script></head>
+</head>
 <body>
     <h1>Mediasoup SFU Client</h1>
 
