--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
 
     <div class="container">
         <h2>Connection</h2>
-        <input type="text" id="roomId" placeholder="Room ID">
+        <input type="text" id="roomId" placeholder="Room ID" value="default-room">
         <input type="text" id="userId" placeholder="User ID">
         <button id="joinBtn">Join Room</button>
         <button id="leaveBtn" disabled>Leave Room</button>
@@ -26,6 +26,7 @@
     <div class="container">
         <h2>My Media</h2>
         <video id="localVideo" autoplay muted playsinline></video>
+        <br>
         <button id="produceBtn" disabled>Start Webcam</button>
         <div>Send Transport: <span id="sendTransportStatus">Inactive</span></div>
         <div>Recv Transport: <span id="recvTransportStatus">Inactive</span></div>
