core.js refactor, chat ui update

--- a/src/index.html
+++ b/src/index.html
@@ -59,5 +59,15 @@
     <h2>Groups</h2>
     <div id="groupsContainer" class="grid"></div>
   </section>
+
+  <!-- Chat -->
+  <section class="panel" id="chatPanel">
+    <h2>Chat</h2>
+    <div id="chatMessages" style="height: 200px; overflow-y: scroll; border: 1px solid #eee; padding: 10px; margin-bottom: 10px; border-radius: 8px;"></div>
+    <div class="row">
+      <input id="chatInput" placeholder="Enter message" style="flex-grow: 1;"/>
+      <button id="chatSendBtn">Send</button>
+    </div>
+  </section>
 </body>
 </html>
